package com.pms.enums;

/** Overall status of a project. */
public enum ProjectStatus {
    NOT_STARTED,
    IN_PROGRESS,
    ON_HOLD,
    COMPLETED
}
