package com.pms.enums;

/** Proficiency level of an employee in a particular skill. */
public enum SkillLevel {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED,
    EXPERT
}
